--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -16,6 +16,10 @@ section{
 }
 .image-logo {
     width: 2.5vw;
+    transition: 300ms;
+}
+.image-logo:hover {
+    transform: scale(1.1);
 }
 .info1{
     display: flex;
