--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,10 +12,15 @@ header {
 
 .image-logo {
     width: 2.5vw;
+    transition: 300ms;
+}
+.image-logo:hover {
+    transform: scale(1.1);
 }
 
 body {
     padding: 0 10vw;
+    margin-bottom: 8vw;
     background-image: url(/src/img/piazinho.png);
     background-repeat: no-repeat;
     background-position: 65vw;
@@ -57,8 +62,9 @@ a {
     color: black;
     padding: 6px 12px;
     border-radius: 0.312vw;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 1.15vw;
+    transition: 300ms;
 }
 
 .aboutme {
@@ -67,6 +73,13 @@ a {
     color: white;
     padding: 8px 16px;
     border-radius: 0.312vw;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 1.15vw;
+    transition: 300ms;
+}
+.aboutme:hover{
+    transform: scale(1.1);
+}
+.projects:hover{
+    transform: scale(1.1);
 }
