--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -174,6 +174,7 @@ section {
     border: 3px solid #6733f6;
     border-radius: 16px;
     padding: 2vw;
+    background-color: white;
 }
 
 .img-card {
