--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,196 +1,330 @@
-* {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-decoration: none;
+@media screen and (min-width: 960px) {
+    * {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-decoration: none;
+    }
+
+    body {
+        padding: 0 12.5vw;
+        background: rgb(103, 51, 246);
+        background: linear-gradient(0deg, rgba(103, 51, 246, 0.09007352941176472) 0%, rgba(255, 255, 255, 1) 100%);
+    }
+
+    header {
+        padding: 2.5vw 0;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    section {
+        margin-bottom: 5vw;
+    }
+
+    .image-logo {
+        width: 2.5vw;
+        transition: 300ms;
+    }
+
+    .image-logo:hover {
+        transform: scale(1.1);
+    }
+
+    .images-linguagens {
+        width: 3.02vw;
+        /* 58px -> 3.02vw */
+        margin: 0 0.63vw;
+        /* 12px -> 0.63vw */
+    }
+
+    .lista {
+        display: flex;
+        border: 0.2vw solid #6733f6;
+        /* 2px -> 0.1vw */
+        border-radius: 0.63vw;
+        /* 12px -> 0.63vw */
+        padding: 0.5vw;
+        align-items: center;
+        margin-bottom: 0.63vw;
+        /* 12px -> 0.63vw */
+        background-color: white;
+        transition: 300ms;
+    }
+
+    .lista:hover {
+        border: 0.2vw solid #ffbfbd;
+        /* 2px -> 0.1vw */
+        transform: scale(1.04);
+    }
+
+    .btn {
+        margin: 1.09vw 0;
+        /* 21px -> 1.09vw */
+    }
+
+    .descricao {
+        display: flex;
+        align-items: center;
+        color: black;
+    }
+
+    .aboutme {
+        display: flex;
+        border: 0.2vw solid #6733f6;
+        background-color: #6733f6;
+        color: white;
+        padding: 0.42vw 0.83vw;
+        /* 8px 16px -> 0.42vw 0.83vw */
+        border-radius: 0.312vw;
+        font-weight: 600;
+        font-size: 1.15vw;
+        transition: 300ms;
+    }
+
+    .aboutme:hover {
+        background-color: #ffbfbd;
+        color: black;
+    }
+
+    .git {
+        width: 1.56vw;
+        /* 30px -> 1.56vw */
+        margin: 0 0.63vw 0 0;
+        /* 12px -> 0.63vw */
+    }
+
+    .container-imagem {
+        display: flex;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image-container {
+        width: 22.83vw;
+        /* 400px -> 20.83vw */
+    }
+
+    .titulo {
+        font-size: 6vw;
+        font-weight: 900;
+        color: #6733f6;
+    }
+
+    .projetos-titulo {
+        margin-bottom: 2vw;
+        text-align: c;
+    }
+
+    .projetos {
+        text-align: center;
+    }
+
+    .carousel-container {
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        /* Centraliza horizontalmente */
+    }
+
+    .carousel {
+        display: flex;
+        transition: transform 0.5s ease-in-out;
+        text-align: center;
+        align-items: center;
+    }
+
+    .projetos-image {
+        width: 100%;
+        display: flex;
+    }
+
+    .prev,
+    .next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+    }
+
+    .prev {
+        left: 0;
+    }
+
+    .next {
+        right: 0;
+    }
+
+    .section-cards {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .cards {
+        width: 18vw;
+        height: 30vw;
+        border: 3px solid #6733f6;
+        border-radius: 16px;
+        padding: 2vw;
+        background-color: white;
+    }
+
+    .img-card {
+        width: 5vw;
+        border: 2px solid #6733f6;
+        padding: 0.5vw;
+        border-radius: 9999px;
+    }
+
+    .titulo-card {
+        color: #6733f6;
+        font-size: 2.5vw;
+        margin-bottom: 1vw;
+    }
+
+    .descricao-card {
+        font-size: 1.5vw;
+        text-align: justify;
+    }
 }
 
-body {
-    padding: 0 12.5vw;
-    background: rgb(103, 51, 246);
-    background: linear-gradient(0deg, rgba(103, 51, 246, 0.09007352941176472) 0%, rgba(255, 255, 255, 1) 100%);
-}
+@media screen and (max-width: 959px) {
+    * {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-decoration: none;
+    }
 
-header {
-    padding: 2.5vw 0;
-    display: flex;
-    justify-content: space-between;
-}
+    body {
+        padding: 0 5vw;
+        text-align: center;
+    }
 
-section {
-    margin-bottom: 5vw;
-}
+    header {
+        padding: 2.5vw 7.5vw;
+        display: flex;
+        justify-content: space-between;
+    }
 
-.image-logo {
-    width: 2.5vw;
-    transition: 300ms;
-}
+    .image-logo {
+        width: 48px;
+    }
 
-.image-logo:hover {
-    transform: scale(1.1);
-}
+    .carousel-container {
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: 35px auto;
+        /* Centraliza horizontalmente */
+    }
 
-.images-linguagens {
-    width: 3.02vw;
-    /* 58px -> 3.02vw */
-    margin: 0 0.63vw;
-    /* 12px -> 0.63vw */
-}
+    .carousel {
+        display: flex;
+        transition: transform 0.5s ease-in-out;
+        text-align: center;
+        align-items: center;
+    }
 
-.lista {
-    display: flex;
-    border: 0.2vw solid #6733f6;
-    /* 2px -> 0.1vw */
-    border-radius: 0.63vw;
-    /* 12px -> 0.63vw */
-    padding: 0.5vw;
-    align-items: center;
-    margin-bottom: 0.63vw;
-    /* 12px -> 0.63vw */
-    background-color: white;
-    transition: 300ms;
-}
+    .projetos-image {
+        width: 100%;
+        display: flex;
+    }
 
-.lista:hover {
-    border: 0.2vw solid #ffbfbd;
-    /* 2px -> 0.1vw */
-    transform: scale(1.04);
-}
+    .prev,
+    .next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+    }
 
-.btn {
-    margin: 1.09vw 0;
-    /* 21px -> 1.09vw */
-}
+    .prev {
+        left: 0;
+    }
 
-.descricao {
-    display: flex;
-    align-items: center;
-    color: black;
-}
+    .next {
+        right: 0;
+    }
 
-.aboutme {
-    display: flex;
-    border: 0.2vw solid #6733f6;
-    background-color: #6733f6;
-    color: white;
-    padding: 0.42vw 0.83vw;
-    /* 8px 16px -> 0.42vw 0.83vw */
-    border-radius: 0.312vw;
-    font-weight: 600;
-    font-size: 1.15vw;
-    transition: 300ms;
-}
+    .section-cards {
+        display: grid;
+        gap: 20px;
+        margin-bottom: 35px;
+    }
 
-.aboutme:hover {
-    background-color: #ffbfbd;
-    color: black;
-}
+    .titulo {
+        font-size: 6vw;
+        font-weight: 900;
+        color: #6733f6;
+    }
 
-.git {
-    width: 1.56vw;
-    /* 30px -> 1.56vw */
-    margin: 0 0.63vw 0 0;
-    /* 12px -> 0.63vw */
-}
+    .cards {
+        border: 3px solid #6733f6;
+        border-radius: 16px;
+        padding: 35px;
+        background-color: white;
+    }
 
-.container-imagem {
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-}
+    .img-card {
+        width: 65px;
+        border: 2px solid #6733f6;
+        padding: 0.5vw;
+        border-radius: 9999px;
+    }
 
-.image-container {
-    width: 22.83vw;
-    /* 400px -> 20.83vw */
-}
+    .titulo-card {
+        color: #6733f6;
+        font-size: 35px;
+        margin-bottom: 1vw;
+    }
 
-.titulo {
-    font-size: 6vw;
-    font-weight: 900;
-    color: #6733f6;
-}
+    .descricao {
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
 
-.projetos-titulo {
-    margin-bottom: 2vw;
-    text-align: c;
-}
+    .descricao-card {
+        font-size: 20px;
+        text-align: justify;
+    }
 
-.projetos {
-    text-align: center;
-}
+    .images-linguagens {
+        width: 58px;
+        /* 58px -> 3.02vw */
+        margin: 12px;
+        /* 12px -> 0.63vw */
+    }
 
-.carousel-container {
-    position: relative;
-    width: 60vw;
-    overflow: hidden;
-    text-align: center;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    /* Centraliza horizontalmente */
-}
+    .lista {
+        display: flex;
+        border: 2px solid #6733f6;
+        border-radius: 18px;
 
-.carousel {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    text-align: center;
-    align-items: center;
-}
+        padding: 0.5vw;
+        align-items: center;
+        margin-bottom: 12px;
+        background-color: white;
+        transition: 300ms;
+    }
 
-.projetos-image {
-    width: 100%;
-    display: flex;
-}
-
-.prev,
-.next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-}
-
-.prev {
-    left: 0;
-}
-
-.next {
-    right: 0;
-}
-
-.section-cards {
-    display: flex;
-    justify-content: space-between;
-}
-
-.cards {
-    width: 18vw;
-    height: 30vw;
-    border: 3px solid #6733f6;
-    border-radius: 16px;
-    padding: 2vw;
-    background-color: white;
-}
-
-.img-card {
-    width: 5vw;
-    border: 2px solid #6733f6;
-    padding: 0.5vw;
-    border-radius: 9999px;
-}
-
-.titulo-card {
-    color: #6733f6;
-    font-size: 2.5vw;
-    margin-bottom: 1vw;
-}
-
-.descricao-card {
-    font-size: 1.5vw;
-    text-align: justify;
+    .lista:hover {
+        border: 2px solid #ffbfbd;
+        transform: scale(1.04);
+    }
 }
