--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,136 +1,256 @@
-* {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-decoration: none;
+@media screen and (min-width: 960px) {
+    * {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-decoration: none;
+    }
+
+    header {
+        padding: 2.5vw;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .image-logo {
+        width: 2.5vw;
+        transition: 300ms;
+    }
+
+    .image-logo:hover {
+        transform: scale(1.1);
+    }
+
+    html {
+        height: 100%;
+        background: rgb(103, 51, 246);
+        background: linear-gradient(0deg, rgba(103, 51, 246, 0.09007352941176472) 0%, rgba(255, 255, 255, 1) 100%);
+    }
+
+    body {
+        padding: 0 10vw;
+        background-image: url(/src/img/piazinho.png);
+        background-repeat: no-repeat;
+        background-position: 65vw;
+        background-size: 25%;
+    }
+
+    section {
+        display: flex;
+        height: 35vw;
+        align-items: center;
+    }
+
+    .titulo {
+        font-size: 6vw;
+        font-weight: 900;
+        color: #6733f6;
+    }
+
+    .descricao {
+        display: flex;
+        font-size: 1.15vw;
+        width: 70%;
+        margin: 2vw 0;
+
+    }
+
+    .btn {
+        display: flex;
+        width: 50%;
+    }
+
+    a {
+        margin: 0 0.625vw 0 0;
+    }
+
+    .projects {
+        border: 0.152vw solid #000000;
+        background-color: #ffbfbd;
+        color: black;
+        padding: 6px 12px;
+        border-radius: 0.312vw;
+        font-weight: 900;
+        font-size: 1.15vw;
+        transition: 300ms;
+    }
+
+    .aboutme {
+        border: 0.152vw solid #000000;
+        background-color: #6733f6;
+        color: white;
+        padding: 8px 16px;
+        border-radius: 0.312vw;
+        font-weight: 900;
+        font-size: 1.15vw;
+        transition: 300ms;
+    }
+
+    .aboutme:hover {
+        transform: scale(1.1);
+    }
+
+    .projects:hover {
+        transform: scale(1.1);
+    }
+
+    .contact {
+        width: 3vw;
+        border: 2px solid #fc98ec;
+        border-radius: 999px;
+        padding: 2px
+    }
+
+    .bt {
+        background-color: transparent;
+        border: 0;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-content {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+    }
+
+    .modal-icons {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+    }
+
+    .modal-icons img {
+        width: 40px;
+        height: 40px;
+    }
+    .piazinho-mobile{
+        display: none;
+    }
 }
 
-header {
-    padding: 2.5vw;
-    display: flex;
-    justify-content: space-between;
-}
+@media screen and (max-width: 959px) {
+    * {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-decoration: none;
+    }
 
-.image-logo {
-    width: 2.5vw;
-    transition: 300ms;
-}
+    body {
+        padding: 0 10vw;
+        text-align: center;
+        background-image: url(/src/img/piazinho.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center 300px;
+    }
 
-.image-logo:hover {
-    transform: scale(1.1);
-}
+    header {
+        padding: 2.5vw;
+        display: flex;
+        justify-content: space-between;
+    }
 
-html {
-    height: 100%;
-    background: rgb(103, 51, 246);
-    background: linear-gradient(0deg, rgba(103, 51, 246, 0.09007352941176472) 0%, rgba(255, 255, 255, 1) 100%);
-}
+    .image-logo {
+        width: 48px;
+    }
+    .titulo {
+        font-size: 50px;
+        font-weight: 900;
+        color: #6733f6;
+        margin-bottom: 28px;
+    }
+    .descricao{
+        text-align: justify;
+        margin-bottom: 28px;
+    }
+    .btn{
+        justify-content: space-between;
+        display: flex;
+    }
+    .projects {
+        border: 2px solid #000000;
+        background-color: #ffbfbd;
+        color: black;
+        padding: 5px 18px;
+        border-radius: 12px;
+        font-weight: 900;
+        font-size: 18px;
+        transition: 300ms;
+    }
 
-body {
-    padding: 0 10vw;
-    background-image: url(/src/img/piazinho.png);
-    background-repeat: no-repeat;
-    background-position: 65vw;
-    background-size: 25%;
-}
+    .aboutme {
+        border: 2px solid #000000;
+        background-color: #6733f6;
+        color: white;
+        padding: 5px 10px;
+        border-radius: 12px;
+        font-weight: 900;
+        font-size: 18px;
+        transition: 300ms;
+    }
 
-section {
-    display: flex;
-    height: 35vw;
-    align-items: center;
-}
+    .aboutme:hover {
+        transform: scale(1.1);
+    }
 
-.titulo {
-    font-size: 6vw;
-    font-weight: 900;
-    color: #6733f6;
-}
+    .projects:hover {
+        transform: scale(1.1);
+    }
+    .contact {
+        border: 2px solid #fc98ec;
+        border-radius: 999px;
+        padding: 2px
+    }
 
-.descricao {
-    display: flex;
-    font-size: 1.15vw;
-    width: 70%;
-    margin: 2vw 0;
+    .bt {
+        background-color: transparent;
+        border: 0;
+    }
 
-}
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+        align-items: center;
+    }
 
-.btn {
-    display: flex;
-    width: 50%;
-}
+    .modal-content {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+    }
 
-a {
-    margin: 0 0.625vw 0 0;
-}
+    .modal-icons {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+    }
 
-.projects {
-    border: 0.152vw solid #000000;
-    background-color: #ffbfbd;
-    color: black;
-    padding: 6px 12px;
-    border-radius: 0.312vw;
-    font-weight: 900;
-    font-size: 1.15vw;
-    transition: 300ms;
-}
-
-.aboutme {
-    border: 0.152vw solid #000000;
-    background-color: #6733f6;
-    color: white;
-    padding: 8px 16px;
-    border-radius: 0.312vw;
-    font-weight: 900;
-    font-size: 1.15vw;
-    transition: 300ms;
-}
-
-.aboutme:hover {
-    transform: scale(1.1);
-}
-
-.projects:hover {
-    transform: scale(1.1);
-}
-
-.contact {
-    width: 3vw;
-    border: 2px solid #fc98ec;
-    border-radius: 999px;
-    padding: 2px
-}
-
-.bt {
-    background-color: transparent;
-    border: 0;
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-}
-
-.modal-icons {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-}
-
-.modal-icons img {
-    width: 40px;
-    height: 40px;
+    .modal-icons img {
+        width: 40px;
+        height: 40px;
+    }
+    .piazinho-mobile{
+        opacity: 0;
+        height: 400px;
+    }
 }
