--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -268,7 +268,7 @@
     }
 
     .titulo {
-        font-size: 6vw;
+        font-size: 50px;
         font-weight: 900;
         color: #6733f6;
     }
@@ -289,7 +289,7 @@
 
     .titulo-card {
         color: #6733f6;
-        font-size: 35px;
+        font-size: 50px;
         margin-bottom: 1vw;
     }
 
@@ -300,7 +300,7 @@
     }
 
     .descricao-card {
-        font-size: 20px;
+        font-size: 15px;;
         text-align: justify;
     }
 
