--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -297,10 +297,12 @@
         display: flex;
         text-align: center;
         align-items: center;
+        font-size: 18px;
+        color: black;
     }
 
     .descricao-card {
-        font-size: 15px;;
+        font-size: 18px;;
         text-align: justify;
     }
 
