--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -121,6 +121,7 @@
     }
 
     .carousel-container {
+        width: 65vw;
         position: relative;
         overflow: hidden;
         text-align: center;
