--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -5,29 +5,44 @@
         text-decoration: none;
     }
 
-    body {
-        padding: 0 12.5vw;
-        background: rgb(103, 51, 246);
-        background: linear-gradient(0deg, rgba(103, 51, 246, 0.09007352941176472) 0%, rgba(255, 255, 255, 1) 100%);
-    }
-
     header {
-        padding: 2.5vw 0;
+        align-items: center;
         display: flex;
+        padding: 1vw 2vw;
         justify-content: space-between;
+        background-color: #6733f6
     }
 
     section {
-        margin-bottom: 5vw;
+        margin-bottom: 65px;
+        padding: 4vw 10vw 0;
     }
 
-    .image-logo {
-        width: 2.5vw;
-        transition: 300ms;
+    .right {
+        display: flex;
+        align-items: center;
+        gap: 30px;
     }
 
-    .image-logo:hover {
-        transform: scale(1.1);
+    .btn-aboutme {
+        color: #6733f6;
+        font-weight: 700;
+        background-color: white;
+        border: 2px solid white;
+        padding: 7px;
+        border-radius: 12px;
+    }
+
+    .contact {
+        color: #6733f6;
+        font-weight: 600;
+        border: 2px solid white;
+        padding: 7px;
+        border-radius: 40px;
+    }
+
+    .header-image {
+        width: 48px;
     }
 
     .info1 {
@@ -139,6 +154,42 @@
     }
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.close {
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.icon-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.img-modal {
+    margin: 10px;
+}
+
 @media screen and (max-width: 959px) {
     * {
         margin: 0;
@@ -146,24 +197,47 @@
         text-decoration: none;
     }
 
-    body {
-        padding: 0 5vw;
-        text-align: center;
-    }
-
     header {
-        padding: 2.5vw 7.5vw;
+        align-items: center;
         display: flex;
+        padding: 1vw 2vw;
         justify-content: space-between;
+        background-color: #6733f6
     }
 
-    .image-logo {
+    section {
+        margin-bottom: 65px;
+        padding: 4vw 10vw 0;
+    }
+
+    .right {
+        display: flex;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .btn-aboutme {
+        color: #6733f6;
+        font-weight: 700;
+        background-color: white;
+        border: 2px solid white;
+        padding: 7px;
+        border-radius: 12px;
+        text-decoration: none;
+    }
+
+    .contact {
+        color: #6733f6;
+        font-weight: 600;
+        border: 2px solid white;
+        padding: 7px;
+        border-radius: 40px;
+    }
+
+    .header-image {
         width: 48px;
     }
 
-    .about-me {
-        margin-bottom: 35px;
-    }
 
     .info1 {
         display: grid;
@@ -300,5 +374,37 @@
         font-size: 18px;
         margin: 2vw 0;
         text-align: justify;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+        align-items: center;
+    }
+    .modal-content {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+    }
+    .close {
+        float: right;
+        font-size: 24px;
+        cursor: pointer;
+    }
+    .icon-container {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+    .img-modal{
+        margin: 10px;
     }
 }
