--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -52,7 +52,9 @@ HTML{
         display: flex;
         justify-content: space-between;
     }
-
+    .image-zig4-o{
+        display: none;
+    }
     .image-zig {
         width: 20.83vw;
         /* 400px -> 20.83vw */
@@ -248,12 +250,14 @@ HTML{
         gap: 15px;
     }
 
-    .image-zig {
+    .image-zig4 {
+        display: none;
+    }
+    .image-zig4-o {
         width: 100%;
         border-radius: 24px;
         border: 4px solid #464f70;
     }
-
 
     .titulo {
         font-size: 50px;
