--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -76,11 +76,12 @@ HTML{
 
     .descricao {
         display: flex;
-        font-size: 1.15vw;
+        font-size: 1.4vw;
         width: 70%;
         margin: 2vw 0;
         text-align: left;
-    }
+        color: rgb(85, 85, 85);
+        }
 
     .info2 {
         display: flex;
@@ -253,6 +254,11 @@ HTML{
     .image-zig4 {
         display: none;
     }
+    .image-zig {
+        width: 100%;
+        border-radius: 24px;
+        border: 4px solid #464f70;
+    }
     .image-zig4-o {
         width: 100%;
         border-radius: 24px;
@@ -271,9 +277,10 @@ HTML{
 
     .descricao {
         display: flex;
-        font-size: 18px;
+        font-size: 4vw;
         margin: 2vw 0;
         text-align: justify;
+        color: rgb(85, 85, 85);
     }
 
     .image-zig2 {
@@ -311,9 +318,10 @@ HTML{
 
     .descricao2 {
         display: flex;
-        font-size: 18px;
+        font-size: 4vw;
         margin: 2vw 0;
         text-align: justify;
+        color: rgb(85, 85, 85);
     }
 
 
@@ -345,9 +353,10 @@ HTML{
 
     .descricao3 {
         display: flex;
-        font-size: 18px;
+        font-size: 4vw;
         margin: 2vw 0;
         text-align: justify;
+        color: rgb(85, 85, 85);
     }
 
 
@@ -378,9 +387,10 @@ HTML{
 
     .descricao4 {
         display: flex;
-        font-size: 18px;
+        font-size: 4vw;
         margin: 2vw 0;
         text-align: justify;
+        color: rgb(85, 85, 85);
     }
 
     .modal {
