--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,6 +1,20 @@
-HTML{
+HTML {
     background-color: white;
+    height: 100%;
 }
+
+body {
+    margin: 0;
+}
+
+.footer {
+    background-color: #feedfb;
+    padding-bottom: 100px;
+    -webkit-box-shadow: 0px 0px 27px 23px rgba(254, 237, 251, 1);
+    -moz-box-shadow: 0px 0px 27px 23px rgba(254, 237, 251, 1);
+    box-shadow: 0px 0px 27px 23px rgba(254, 237, 251, 1)
+}
+
 @media screen and (min-width: 960px) {
     * {
         margin: 0;
@@ -52,9 +66,11 @@ HTML{
         display: flex;
         justify-content: space-between;
     }
-    .image-zig4-o{
+
+    .image-zig4-o {
         display: none;
     }
+
     .image-zig {
         width: 20.83vw;
         /* 400px -> 20.83vw */
@@ -81,7 +97,7 @@ HTML{
         margin: 2vw 0;
         text-align: left;
         color: rgb(85, 85, 85);
-        }
+    }
 
     .info2 {
         display: flex;
@@ -256,11 +272,13 @@ HTML{
     .image-zig4 {
         display: none;
     }
+
     .image-zig {
         width: 100%;
         border-radius: 24px;
         border: 4px solid #464f70;
     }
+
     .image-zig4-o {
         width: 100%;
         border-radius: 24px;
@@ -407,23 +425,27 @@ HTML{
         justify-content: center;
         align-items: center;
     }
+
     .modal-content {
         background-color: white;
         padding: 20px;
         border-radius: 10px;
         text-align: center;
     }
+
     .close {
         float: right;
         font-size: 24px;
         cursor: pointer;
     }
+
     .icon-container {
         display: flex;
         justify-content: space-around;
         margin-top: 20px;
     }
-    .img-modal{
+
+    .img-modal {
         margin: 10px;
     }
 }
