--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -356,6 +356,7 @@ HTML{
     .projetos-image {
         width: 83.7%;
         margin: 22px 0;
+        border: 3px solid #656865;
     }
 
     .trashealth {
